# haskell-strict-evaluation-test

./: LICENSE  README.md  stack.yaml  test2.cabal
src/: Lib.hs
test/: Spec.hs  Test1.hs
