name:                test2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ki11men0w/test2#readme
license:             BSD3
license-file:        LICENSE
author:              Maksim Golubev
maintainer:          maksim.golubev72@gmail.com
copyright:           2017 Maksim Golubev
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base
                     , temporary
                     , deepseq
                     , parallel
  default-language:    Haskell2010

executable test2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , test2
  default-language:    Haskell2010

test-suite test2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , test2
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules: Test1

source-repository head
  type:     git
  location: https://github.com/ki11men0w/test2
